tests/cheri-ci/expected/0228-tag-redecl.error.c.expected
cheri-ci/0228-tag-redecl.error.c:2:7: error: constraint violation: use of 'S' with tag type that does not match previous declaration
union S;
      ^ 
ยง6.7.2.3#2: 
2   Where two declarations that use the same tag declare the same type, they shall both use
    the same choice of struct, union, or enum.
